wip(refactor): update geocoding integration and introduce GeocodeResult class